<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_RecipeParam" Id="{0f620af8-c30d-4af7-b0a2-88c84a465146}">
    <Declaration><![CDATA[TYPE ST_RecipeParam :
STRUCT

	(*Paramètres production*)
	lrPositionBasse: LREAL;
	lrVitesse: INT;
	
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>